[package]
name = "ConstDB"
version = "0.0.1"
description = "A redis-like cache store that implements CRDTs and active-active replications."
keywords = ["redis", "CRDT", "CRDB", "replication", "cache"]
authors = ["tancehao(tancehao93@163.com)"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[[bin]]
name = "constdb-server"
path = "bin/server.rs"

[[bin]]
name = "constdb-cli"
path = "bin/cli.rs"

[[bin]]
name = "constdb-test"
path = "bin/test.rs"

[lib]
name = "constdb"
path = "src/lib.rs"

[dependencies]
log="0.4"
env_logger="0.6"
bytes = "1.0"
rand = "0.8.5"
lazy_static = "1.2.0"
tokio = {version = "1", features = ["full"]}
failure="0.1"
clap = {version = "2.33.0", features = ["yaml"]}
bitflags = "1.2.1"
chrono = "0.4.19"
toml = "0.5.8"
serde_derive = "1.0.126"
serde = "1.0"
log4rs = "1.0.0"
nix = "0.20.0"
serde_json = "1.0"
base16 = "0.2.1"
colour = "0.6"
async-trait = "0.1.52"
once_cell = "1.10.0"
jemallocator = "0.3.2"
spin = "0.9.2"
sysinfo = "0.23.5"
pprof = { version = "0.3.0", features = ["protobuf", "flamegraph"]}
gperftools = { version = "0.2.0", features = ["heap"]}
core_affinity = "0.5.10"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
debug = true
